--- a/index.html
+++ b/index.html
@@ -194,13 +194,22 @@
 
 	function highlightCity(layer) {
     //layer = e.target;
-		layer.setStyle({
+		/*layer.setStyle({
 			weight: 8,
 			radius: 1,
 			color: '#81d4fa',
 			dashArray: '',
 			fillOpacity: 0.0
-		});
+		});*/
+
+		layer.setIcon(new L.Icon({
+		  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+		  shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+			iconSize: [25, 41],
+			iconAnchor:   [12 ,41],
+		  popupAnchor: [1, -34],
+		  shadowSize: [41, 41]
+		}));
 
 		/*if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
 			layer.bringToFront();
@@ -211,7 +220,9 @@
 
   function resetHighlightCity(layer) {
 		layerGroupCities.eachLayer(function (l) {
-    	l.resetStyle(layer);
+    	//l.resetStyle(layer);
+
+			layer.setIcon(getCityIcon(layer.feature));
 		});
 	}
 
@@ -253,14 +264,17 @@
 
 		var layerCities = L.geoJSON(cities[0].features, {
 			pointToLayer: function(feature, latlng) {
-       	return new L.CircleMarker(latlng, {
+       	/*return new L.CircleMarker(latlng, {
 		 			radius: 1,
 		 			weight: 0.000005 * feature.properties.POP_MIN,
 		 			//opacity: 1,
-		 			color: 'white',
+		 			color: '#e64a19',
 		 			fillOpacity: 0.0
 		 			//fillColor: '#6abf69'
-	 			});
+	 			});*/
+				return new L.marker(latlng, {
+					icon: getCityIcon(feature),
+				});
       },
 			//style: styleCity,
 			onEachFeature: onEachCity,
@@ -271,6 +285,13 @@
 		map.fitBounds(layerGroupStates.getBounds());
 
 		nextCity();
+	}
+
+	function getCityIcon(feature){
+		return new L.Icon.Default({
+			iconSize: [25, 41],
+			iconAnchor:   [12, 41]
+		})
 	}
 
 	function onEachCity(feature, layer) {
