--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 					left: 10px;
 					z-index: 1000;
 				}
+
+				#details {
+					position:absolute;
+				  top:270px;
+					left: 10px;
+					z-index: 1000;
+					color: #ffffff;
+				}
     </style>
 
 </head>
@@ -52,6 +60,13 @@
 <select name="countries" id="countries" onchange="countrySelected()">
 </select>
 <br>
+
+<button id="next-button" onclick="nextCountry();">Next Country</button>
+<form onsubmit="checkCountryName(event);">
+	<input id="country-name" type="text">
+	<button id="check-country-name-button" type="submit">Check</button>
+</form>
+
 <button id="next-button" onclick="nextState();">Next State</button>
 <form onsubmit="checkStateName(event);">
 	<input id="state-name" type="text">
@@ -59,12 +74,17 @@
 </form>
 
 <button id="next-button" onclick="nextCity();">Next City</button>
-
 <form onsubmit="checkCityName(event);">
 	<input id="city-name" type="text">
 	<button id="check-city-name-button" type="submit">Check</button>
 </form>
 
+</div>
+
+<div id="details">
+	<p id="details-country">Test</p>
+	<p id="details-state">Test</p>
+	<p id="details-city">Test</p>
 </div>
 
 <script type="text/javascript">
@@ -75,23 +95,40 @@
 		maxZoom: 16
 	}).addTo(map);
 
-	var info = L.control();
+	var layerGroupCountries = L.featureGroup([]).addTo(map);
+	var layerGroupStates = L.featureGroup([]).addTo(map);
+	var layerGroupCities = L.featureGroup([]).addTo(map);
 
-	info.onAdd = function (map) {
-		this._div = L.DomUtil.create('div', 'info');
-		this.update();
-		return this._div;
-	};
+	showCountries();
 
-	info.update = function (props) {
-		this._div.innerHTML = '<h4>Info</h4>' +  (props ?
-			'<b>' + props.geonunit + '</b><br />' + props.name + '<br />' + props.NAME
-			: 'Hover over a state');
-	};
+	// Details
 
-	info.addTo(map);
+	var currentCountry;
+	var currentState;
+	var currentCity;
+
+	function updateDetails(){
+		var detailsCountry = document.getElementById('details-country');
+		detailsCountry.innerHTML = currentCountry != undefined ? currentCountry.feature.properties.NAME_EN : 'none';
+
+		var detailsState = document.getElementById('details-state');
+		detailsState.innerHTML = currentState != undefined ? currentState.feature.properties.name : 'none';
+
+		var detailsCity = document.getElementById('details-city');
+		detailsCity.innerHTML = currentCity != undefined ? currentCity.feature.properties.name_en : 'none';
+	}
 
 	// Countries
+
+	function showCountries(){
+		layerGroupCountries.eachLayer(function(layer) { layerGroupCountries.removeLayer(layer);});
+		var layerCountries = L.geoJSON(countries[0].features, {
+			style: styleCountry,
+			//filter: function(f){ return f.properties.geonunit === countryLayer.feature.properties.NAME_EN },
+			onEachFeature: onEachCountry
+		});
+		layerGroupCountries.addLayer(layerCountries);
+	}
 
 	function styleCountry(feature) {
 		return {
@@ -104,9 +141,39 @@
 		};
 	}
 
-	function highlightCountry(e) {
-		var layer = e.target;
+	function onEachCountry(feature, layer) {
+		layer.on({
+			//mouseover: highlightFeatureCountries,
+			//mouseout: resetHighlightCountries,
+			click: selectCountry
+		});
+	}
 
+	function selectCountry(e){
+		var layer = e.target;
+		if(currentCountry == layer){
+			return;
+		}else{
+			currentState = undefined;
+			currentCity = undefined;
+		}
+		if(currentCountry != undefined){
+			resetHighlightCountry(currentCountry);
+		}
+		currentCountry = layer;
+		highlightCountry(layer);
+		updateDetails();
+
+		/*var selectBox = document.getElementById("countries");
+    var selectedValue = selectBox.options[selectBox.selectedIndex].value;*/
+
+		showStates(layer);
+		showCities(layer);
+
+		map.fitBounds(layerGroupStates.getBounds());
+	}
+
+	function highlightCountry(layer) {
 		layer.setStyle({
 			weight: 4,
 			color: '#222222',
@@ -117,33 +184,27 @@
 		/*if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
 			layer.bringToFront();
 		}*/
-
-		//info.update(layer.feature.properties);
 	}
 
-	function resetHighlightCountry(e) {
-		layerCountries.resetStyle(e.target);
+	function resetHighlightCountry(layer) {
+		layerCountries.resetStyle(layer);
 	}
 
 	function zoomToCountry(e) {
-		map.fitBounds(e.target.getBounds(), {padding: [1000, 1000]});
+		map.fitBounds(e.target.getBounds(), {padding: [50, 50]});
 	}
-
-	function onEachCountry(feature, layer) {
-		layer.on({
-			//mouseover: highlightFeatureCountries,
-			//mouseout: resetHighlightCountries,
-			//click: zoomToFeature
-		});
-	}
-
-	var layerCountries;
-	layerCountries = L.geoJson(countries, {
-    style: styleCountry,
-    onEachFeature: onEachCountry
-  }).addTo(map);
 
 	// States and Provinces
+
+	function showStates(countryLayer){
+		layerGroupStates.eachLayer(function(layer) { layerGroupStates.removeLayer(layer);});
+		var layerStates = L.geoJSON(states[0].features, {
+			style: styleState,
+			filter: function(f){ return f.properties.geonunit === countryLayer.feature.properties.NAME_EN },
+			onEachFeature: onEachState
+		});
+		layerGroupStates.addLayer(layerStates);
+	}
 
 	function styleState(feature) {
 		return {
@@ -154,6 +215,24 @@
 			fillOpacity: 0.0,
 			//fillColor: '#6abf69'
 		};
+	}
+
+	function onEachState(feature, layer) {
+		layer.on({
+			//mouseover: highlightFeature,
+			//mouseout: resetHighlight,
+			click: selectState
+		});
+	}
+
+	function selectState(e){
+		if(currentState != undefined){
+			resetHighlightState(currentState);
+		}
+		var layer = e.target;
+		currentState = layer;
+		highlightState(layer);
+		updateDetails();
 	}
 
 	function highlightState(layer) {
@@ -168,8 +247,6 @@
 		/*if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
 			layer.bringToFront();
 		}*/
-
-		info.update(layer.feature.properties);
 	}
 
   function resetHighlightState(layer) {
@@ -182,15 +259,45 @@
 		map.fitBounds(layer.getBounds(), {padding: [300, 300]});
 	}
 
-	/*function onEachFeature(feature, layer) {
-		layer.on({
-			mouseover: highlightFeature,
-			mouseout: resetHighlight,
-			click: updateInfo
-		});
-	}*/
-
 	// Cities
+
+	function showCities(countryLayer){
+		layerGroupCities.eachLayer(function(layer) { layerGroupCities.removeLayer(layer);});
+		var layerCities = L.geoJSON(cities[0].features, {
+			pointToLayer: function(feature, latlng) {
+       	/*return new L.CircleMarker(latlng, {
+		 			radius: 1,
+		 			weight: 0.000005 * feature.properties.POP_MIN,
+		 			//opacity: 1,
+		 			color: '#e64a19',
+		 			fillOpacity: 0.0
+		 			//fillColor: '#6abf69'
+	 			});*/
+				return new L.marker(latlng, {
+					icon: getCityIcon(feature),
+				});
+      },
+			onEachFeature: onEachCity,
+			filter: function(f){ return f.properties.ADM0NAME === countryLayer.feature.properties.NAME_EN && f.properties.RANK_MIN > 5 }
+		});
+		layerGroupCities.addLayer(layerCities);
+	}
+
+	function onEachCity(feature, layer) {
+		layer.on({
+			click: selectCity
+		});
+	}
+
+	function selectCity(e){
+		if(currentCity != undefined){
+			resetHighlightCity(currentCity);
+		}
+		var layer = e.target;
+		currentCity = layer;
+		highlightCity(layer);
+		updateDetails();
+	}
 
 	function highlightCity(layer) {
     //layer = e.target;
@@ -214,8 +321,6 @@
 		/*if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
 			layer.bringToFront();
 		}*/
-
-		info.update(layer.feature.properties);
 	}
 
   function resetHighlightCity(layer) {
@@ -224,6 +329,13 @@
 
 			layer.setIcon(getCityIcon(layer.feature));
 		});
+	}
+
+	function getCityIcon(feature){
+		return new L.Icon.Default({
+			iconSize: [25, 41],
+			iconAnchor:   [12, 41]
+		})
 	}
 
 	// Country Selection
@@ -245,74 +357,50 @@
 		}
 	}
 
-	var layerGroupStates = L.featureGroup([]).addTo(map);
-	var layerGroupCities = L.featureGroup([]).addTo(map);
+	// Quiz
 
-	function countrySelected(){
-		layerGroupStates.eachLayer(function(layer) { layerGroupStates.removeLayer(layer);});
-		layerGroupCities.eachLayer(function(layer) { layerGroupCities.removeLayer(layer);});
+	// Country Quiz
 
-		var selectBox = document.getElementById("countries");
-    var selectedValue = selectBox.options[selectBox.selectedIndex].value;
-
-		var layerStates = L.geoJSON(states[0].features, {
-			style: styleState,
-			filter: function(f){ return f.properties.geonunit === selectedValue }
-
-		});
-		layerGroupStates.addLayer(layerStates);
-
-		var layerCities = L.geoJSON(cities[0].features, {
-			pointToLayer: function(feature, latlng) {
-       	/*return new L.CircleMarker(latlng, {
-		 			radius: 1,
-		 			weight: 0.000005 * feature.properties.POP_MIN,
-		 			//opacity: 1,
-		 			color: '#e64a19',
-		 			fillOpacity: 0.0
-		 			//fillColor: '#6abf69'
-	 			});*/
-				return new L.marker(latlng, {
-					icon: getCityIcon(feature),
-				});
-      },
-			//style: styleCity,
-			onEachFeature: onEachCity,
-			filter: function(f){ return f.properties.ADM0NAME === selectedValue && f.properties.RANK_MIN > 5 }
-		});
-		layerGroupCities.addLayer(layerCities);
-
-		map.fitBounds(layerGroupStates.getBounds());
-
-		nextCity();
+	function checkCountryName(event) {
+			event.preventDefault();
+			if(currentCountry.feature.properties.NAME_EN == document.getElementById("country-name").value){
+				alert('correct');
+				document.getElementById("state-name").value = "";
+				nextCountry();
+			}else{
+				alert('wrong');
+			}
 	}
 
-	function getCityIcon(feature){
-		return new L.Icon.Default({
-			iconSize: [25, 41],
-			iconAnchor:   [12, 41]
-		})
-	}
+	function nextCountry(){
+		if(currentCountry != undefined){
+			resetHighlightCountry(currentCountry);
+		}
 
-	function onEachCity(feature, layer) {
-		layer.on({
-			click: cityClicked
+		var values = [];
+		layerGroupStates.eachLayer(function (layer) {
+			layer.eachLayer(function(layer2) {
+  			values.push(layer2);
+			});
 		});
-	}
 
-	function cityClicked(e){
-		console.log(e.target);
+		if(values.length > 0){
+			var randomValue = currentState;
+			do{
+				randomValue = values[parseInt(Math.random() * values.length)]
+			}while(values.length > 1 && randomValue == currentState)
+
+			currentState = randomValue;
+			highlightState(randomValue);
+			updateDetails();
+		}
 	}
 
 	// State Quiz
 
-	var lastState;
-
 	function checkStateName(event) {
 			event.preventDefault();
-			console.log(lastState.feature.properties.name);
-			console.log(document.getElementById("state-name").value);
-			if(lastState.feature.properties.name == document.getElementById("state-name").value){
+			if(currentState.feature.properties.name == document.getElementById("state-name").value){
 				alert('correct');
 				document.getElementById("state-name").value = "";
 				nextState();
@@ -322,21 +410,11 @@
 	}
 
 	function nextState(){
-		if(lastState != undefined){
-			resetHighlightState(lastState);
+		if(currentState != undefined){
+			resetHighlightState(currentState);
 		}
 
-		//console.log(states.features);
-		/*const values = Object.values(geojson._layers)
-
-		valuesFiltered = values.filter(function (a) {
-			var selectBox = document.getElementById("countries");
-	    var selectedValue = selectBox.options[selectBox.selectedIndex].value;
-    	return a.feature.properties.geonunit === selectedValue;
-		});*/
-
 		var values = [];
-
 		layerGroupStates.eachLayer(function (layer) {
 			layer.eachLayer(function(layer2) {
   			values.push(layer2);
@@ -344,29 +422,23 @@
 		});
 
 		if(values.length > 0){
-			var randomValue = lastState;
+			var randomValue = currentState;
 			do{
 				randomValue = values[parseInt(Math.random() * values.length)]
-			}while(values.length > 1 && randomValue == lastState)
+			}while(values.length > 1 && randomValue == currentState)
 
-			console.log(randomValue);
-
-			lastState = randomValue;
-
+			currentState = randomValue;
 			highlightState(randomValue);
+			updateDetails();
 		}
 	}
 
 	// City Quiz
 
-	var lastCity;
-
 	function checkCityName(event) {
 			event.preventDefault();
-			console.log(lastCity.feature.properties.name);
-			console.log(document.getElementById("city-name").value);
-			if(lastCity.feature.properties.NAME == document.getElementById("city-name").value){
-				alert('correct\npopulation: ' + lastCity.feature.properties.POP_MAX);
+			if(currentCity.feature.properties.NAME == document.getElementById("city-name").value){
+				alert('correct\npopulation: ' + currentCity.feature.properties.POP_MAX);
 				document.getElementById("city-name").value = "";
 				nextCity();
 			}else{
@@ -375,21 +447,11 @@
 	}
 
 	function nextCity(){
-		if(lastCity != undefined){
-			resetHighlightCity(lastCity);
+		if(currentCity != undefined){
+			resetHighlightCity(currentCity);
 		}
 
-		//console.log(states.features);
-		/*const values = Object.values(geojson._layers)
-
-		valuesFiltered = values.filter(function (a) {
-			var selectBox = document.getElementById("countries");
-	    var selectedValue = selectBox.options[selectBox.selectedIndex].value;
-    	return a.feature.properties.geonunit === selectedValue;
-		});*/
-
 		var values = [];
-
 		layerGroupCities.eachLayer(function (layer) {
 			layer.eachLayer(function(layer2) {
   			values.push(layer2);
@@ -397,16 +459,14 @@
 		});
 
 		if(values.length > 0){
-			var randomValue = lastCity;
+			var randomValue = currentCity;
 			do{
 				randomValue = values[parseInt(Math.random() * values.length)]
-			}while(values.length > 1 && randomValue == lastCity)
+			}while(values.length > 1 && randomValue == currentCity)
 
-			console.log(randomValue);
-
-			lastCity = randomValue;
-
+			currentCity = randomValue;
 			highlightCity(randomValue);
+			updateDetails();
 		}
 	}
 
